--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1276,7 +1276,7 @@
                                             <action selector="decreaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="ljQ-XV-bWw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
                                         <rect key="frame" x="238" y="105" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="plus_new.png">
@@ -1286,7 +1286,7 @@
                                             <action selector="increaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="Gu5-aa-Alg"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
                                         <rect key="frame" x="91" y="103" width="139" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -1337,7 +1337,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="187" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="7FC56790-4FA1-4A04-9EC1-3F03DB9C0B06" colorSpace="pattern"/>
+                                <color key="color" patternImage="6F4C5747-6A7A-4EA2-8BD0-3FF06EE204D3" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wood-grain-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="434" width="320" height="46"/>
@@ -1569,7 +1569,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="65" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="8AA30C72-23E4-4F8F-AAB2-069C6470209B" colorSpace="pattern"/>
+                                        <color key="color" patternImage="B6ED889F-DB77-44CB-9C79-C22DBE8A0761" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Finding Your Ride To Work Tomorrow 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
                                         <rect key="frame" x="20" y="35" width="280" height="55"/>
@@ -1856,7 +1856,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <action selector="cancelRideButtonTapped:" destination="adg-RW-m0r" eventType="touchUpInside" id="zJM-Kq-Rky"/>
+                                            <action selector="finalActionButtonTapped:" destination="adg-RW-m0r" eventType="touchUpInside" id="3d0-2v-hrW"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1901,8 +1901,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="cancelButton" destination="wbI-CF-6jc" id="9w2-wf-C72"/>
                         <outlet property="designationLabel" destination="h9f-xG-jNI" id="4dT-Fa-4FB"/>
+                        <outlet property="finalActionButton" destination="wbI-CF-6jc" id="z6v-WO-cTM"/>
                         <outlet property="imageView1" destination="7oM-Fj-rnD" id="yz4-0E-3zc"/>
                         <outlet property="imageView2" destination="Z5h-71-TdY" id="ppi-ts-X9D"/>
                         <outlet property="imageView3" destination="Pbp-PP-ETC" id="pNr-DA-7kd"/>
@@ -1922,7 +1922,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7FC56790-4FA1-4A04-9EC1-3F03DB9C0B06" width="320" height="460">
+        <image name="6F4C5747-6A7A-4EA2-8BD0-3FF06EE204D3" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11809,7 +11809,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="8AA30C72-23E4-4F8F-AAB2-069C6470209B" width="320" height="460">
+        <image name="B6ED889F-DB77-44CB-9C79-C22DBE8A0761" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
